frontend/src/index.css
/* ... */
.find-conversation {
  cursor: pointer;
  padding: 0 10px;
  height: 28px;
  width: 100%;
  text-align: left;
  background-color: #202225;
  color: #8c8f93;
  border-radius: 4px;
  border: none;
}

.sublist-content {
  flex: 2;
  overflow: hidden scroll;
  padding: 10px;
  max-height: calc(100vh - 127px);
}
.sublist-content .members-span {
  font-size: 11px;
  color: #9a9da1;
  font-weight: 600;
}
.member-list {
  display: flex;
  flex-direction: column;
  gap: 5px;
  padding-top: 5px;
}
.member-list .member-button {
  width: 100%;
  height: 44px;
  border-radius: 4px;
  background: transparent;
  border: none;
  display: flex;
  gap: 10px;
  align-items: center;
  color: #fff;
  font-weight: 400;
  cursor: pointer;
}
.member-list .member-button:hover {
  background-color: rgba(255, 255, 255, 0.188);
}
.member-button .friend-pic {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  border: none;
  background-color: #5865f2;
  overflow: hidden;
}
.friend-pic img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.sublist-footer {
  background-color: #292b2f;
  height: 52px;
  max-height: 52px;
  padding: 5px;
}
.profile-user-container {
  display: flex;
  justify-content: center;
  align-items: center;

  height: 100%;
}
.profile-user {
  height: 100%;
  width: 100%;
  border-radius: 5px;
  display: flex;
  gap: 5px;
  padding: 0 6px;
  align-items: center;
}
.profile-user:hover {
  background-color: rgba(255, 255, 255, 0.188);
  cursor: pointer;
}
.profile-user-settings {
  color: #fff;
  padding: 5px;
  border-radius: 5px;
  width: 32px;
  height: 100%;
}
.profile-user-settings:hover {
  background-color: rgba(255, 255, 255, 0.188);
  cursor: pointer;
}
.profile-pic-img {
  width: 35px;
  height: 35px;
  background-color: #000;
  border: transparent;
  border-radius: 50%;
}
.identity {
  color: #fff;
  font-size: 12px;
}
.identity .name {
  font-size: 14px;
}
.identity span {
  display: block;
  text-align: left;
}
.identity .name {
  font-weight: 600;
}
.chat-section {
  flex: 2 1;
  margin-right: 10px;
  height: calc((100vh - 27px));
  background-color: #313338;
  border-top-right-radius: 10px;
  display: flex;
  flex-direction: column;
}
.chat-section .chat-area {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  flex: 2;
}
.chat-area .chat-box {
  padding: 0 20px;
  color: #fff;
  display: flex;
  margin-bottom: 15px;
}
.chat-box .chat-pic {
  width: 40px;
  height: 40px;
  margin-right: 20px;
  border-radius: 50%;
  object-fit: cover;
}
.chat-box .chat-detail {
  display: flex;
  flex-direction: column;
}
.chat-box .chat-detail-top {
  display: flex;
  gap: 10px;
  align-items: center;
  height: fit-content;
}
.chat-box .chat-sender {
  font-size: 14px;
  color: #3d47f4;
}
.chat-box .chat-time {
  font-size: 11px;
  color: #70737c;
}
.chat-box .chat-content {
  font-size: 14px;
}
.chat-area .chat-box:hover {
  background-color: #2e3035;
}
.chat-section .typing-area {
  height: 52px;
  padding: 8px 12px;
  width: 100%;
  background-color: #313338;
}
.typing-area .typing-input {
  width: 100%;
  height: 100%;
  background-color: #383a40;
  border: transparent;
  border-radius: 5px;
  outline: none;
  padding: 0 8px;
  color: #fff;
}
.join-card {
  background-color: #383a40;
  padding: 15px;
  min-width: 450px;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.35);
  -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.35);
  -moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.35);
}
.join-card .join-title {
  font-size: 18px;
  font-weight: 600;
  color: #fff;
  text-align: center;
  display: block;
}
.join-server-details {
  display: flex;
  margin: 20px;
  justify-content: center;
  gap: 20px;
  padding: 15px;
  background-color: #292b2f;
  border-radius: 10px;
}
.join-server-details .server-pic {
  width: 120px;
  height: 120px;
  border-radius: 50%;
  object-fit: cover;
}
.join-server-details .server-detail {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 5px;
}
.server-detail .server-name {
  font-size: 16px;
  font-weight: 600;
  color: #fff;
}
.server-detail .member-total {
  border-radius: 10px;
  padding: 2px 10px;
  background-color: #4752c4;
  font-size: 10px;
  font-weight: 600;
  text-align: center;
  color: #fff;
}
.server-detail .server-button {
  width: 100%;
  padding: 4px 8px;
  margin-top: 10px;
  border-radius: 2px;
  cursor: pointer;
  background-color: #248046;
  color: #fff;
}
.server-detail .server-button:hover {
  background-color: #1d5432;
}
@keyframes github {
  0% {
    font-size: 3rem;
    transform: rotateZ(0);
  }
  10% {
    font-size: 4rem;
  }
  20% {
    transform: rotateZ(30deg);
  }
  40% {
    transform: rotateZ(-30deg);
  }
  60% {
    transform: rotateZ(30deg);
  }
  80% {
    transform: rotateZ(-30deg);
  }
  100% {
    font-size: 4rem;
    transform: rotateZ(0deg);
  }
}
@keyframes spin {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@media only screen and (max-width: 600px) {
  .app-title {
    position: relative;
    align-self: center;
  }
  .login-card,
  .reg-card {
    padding: 15px;
    border-radius: 5px;
  }

  .github-href {
    position: relative;
  }
  .login-card,
  .reg-card {
    position: relative;
  }
}

